# rfx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rfx.sln  rfx.sln.DotSettings  rfx.vcxproj  rfx.vcxproj.filters
assets/: application-config.json  textured-triangle.vert
assets/common/shaders/: color.vert  common_light.vert  directional_light.frag  directional_light.glsl  directional_light.vert  light.glsl  material.glsl  point_light.glsl  point_light.vert  spot_light.glsl  spot_light.vert  texture.vert
assets/shaders/: color.vert  default.frag  default.vert  diffuse.vert  fragment_phong.frag  fragment_phong.vert  multilight.frag  multilight.vert  normalmap.frag  normalmap.vert  pbr.frag  pbr.vert  pbr_textured.frag  pbr_textured.vert  pointlight.frag  pointlight.vert  quad.vert  skybox.frag  skybox.vert  spotlight.frag  spotlight.vert  texture.frag  texture.vert  textured_multilight.frag  textured_multilight.vert  vertex_diffuse.frag  vertex_diffuse.vert  vertex_phong.frag  vertex_phong.vert
assets/shaders/pbr_gltf/: brdf.glsl  brdf_lut.comp  functions.glsl  material_info.glsl  pbr_gltf.frag  pbr_gltf.vert  punctual.glsl  textures.glsl  tonemapping.glsl  uniforms.glsl
assets/tests/cube/: application-config.json
assets/tests/directional-vertex-lighting/: application-config.json
assets/tests/fragment-directional-light/: application-config.json
assets/tests/textured-cube/: application-config.json
assets/tests/textured-cubes/: application-config.json
assets/tests/textured-quad/: application-config.json
assets/tests/triangle/: application-config.json
assets/tests/vertex-directional-light/: application-config.json
assets/tests/vertex-point-light/: application-config.json
assets/tests/vertex-spot-light/: application-config.json
res/: Resource.h  rfx.rc  targetver.h
src/imgui/: imgui_impl_vulkan.cpp
src/rfx/: main.cpp  pch.cpp  pch.h  rfx.cpp  rfx.h
src/rfx/application/: Application.cpp  Application.h  DevTools.cpp  DevTools.h  ImageLoader.cpp  ModelLoader.cpp  ModelLoader.h  SceneLoader.cpp  SceneLoader.h  ShaderCache.cpp  ShaderCache.h  ShaderLoader.cpp  ShaderLoader.h  (+10 more)
test/: CMakeLists.txt  ColoredQuad.cpp  ColoredQuad.h  CubeTest.cpp  CubeTest.h  DirectionalVertexLightingTest.cpp  DirectionalVertexLightingTest.h  PerVertexDirectionalLightTest.cpp  PerVertexDirectionalLightTest.h  PerVertexPointLightTest.cpp  PerVertexPointLightTest.h  PerVertexSpotLightTest.cpp  PerVertexSpotLightTest.h  TestApplication.cpp  TestApplication.h  TestEffect.cpp  TestEffect.h  TestMaterialShader.cpp  TestMaterialShader.h  TexturedCubeTest.cpp  TexturedCubeTest.h  TexturedCubesTest.cpp  TexturedCubesTest.h  TexturedQuad.cpp  TexturedQuad.h  TexturedQuadTest.cpp  TexturedQuadTest.h  TriangleTest.cpp  TriangleTest.h  VertexDirectionalLightTest.cpp  VertexPointLightTest.cpp  VertexSpotLightTest.cpp  VertexSpotLightTest.h
test/BrdfLutGenTest/: BrdfLutGenTest.cpp  BrdfLutGenTest.h
test/ColoredQuad/: ColoredQuad.cpp  ColoredQuad.h
test/ColoredQuadTest/: ColoredQuadTest.cpp  ColoredQuadTest.h
test/CubeMapTest/: CubeMapTest.cpp  CubeMapTest.h  ReflectionEffect.cpp  ReflectionEffect.h  ReflectionShader.cpp  ReflectionShader.h  SkyBox.cpp  SkyBox.h  SkyBoxEffect.cpp  SkyBoxEffect.h  SkyBoxShader.cpp  SkyBoxShader.h
test/FragmentPhongTest/: FragmentPhongEffect.cpp  FragmentPhongEffect.h  FragmentPhongTest.cpp  FragmentPhongTest.h
test/IrradianceMapGenTest/: IrradianceMapGenTest.cpp  IrradianceMapGenTest.h
test/MultiLightTest/: MultiLightEffect.cpp  MultiLightEffect.h  MultiLightShader.cpp  MultiLightShader.h  MultiLightTest.cpp  MultiLightTest.h
test/NormalMapTest/: NormalMapEffect.cpp  NormalMapEffect.h  NormalMapShader.cpp  NormalMapShader.h  NormalMapTest.cpp  NormalMapTest.h
test/PBRTest/: PBREffect.cpp  PBREffect.h  PBRShader.cpp  PBRShader.h  PBRTest.cpp  PBRTest.h
test/PointLightTest/: PointLightEffect.cpp  PointLightEffect.h  PointLightShader.cpp  PointLightShader.h  PointLightTest.cpp  PointLightTest.h
test/SampleViewerTest/: SampleViewerShader.cpp  SampleViewerShader.h  SampleViewerTest.cpp  SampleViewerTest.h
test/SceneTest/: SceneTest.cpp  SceneTest.h
test/SceneTest/effects/: VertexDiffuseEffect.cpp  VertexDiffuseEffect.h
test/SpotLightTest/: SpotLightEffect.cpp  SpotLightEffect.h  SpotLightShader.cpp  SpotLightShader.h  SpotLightTest.cpp  SpotLightTest.h
test/TexturedMultiLightTest/: TexturedMultiLightEffect.cpp  TexturedMultiLightEffect.h  TexturedMultiLightShader.cpp  TexturedMultiLightShader.h  TexturedMultiLightTest.cpp  TexturedMultiLightTest.h
test/TexturedPBRTest/: TexturedPBREffect.cpp  TexturedPBREffect.h  TexturedPBRShader.cpp  TexturedPBRShader.h  TexturedPBRTest.cpp  TexturedPBRTest.h
test/TexturedQuad/: TexturedQuad.cpp  TexturedQuad.h
test/TexturedQuadTest/: TexturedQuadTest.cpp  TexturedQuadTest.h
test/VertexDiffuseTest/: VertexDiffuseEffect.cpp  VertexDiffuseEffect.h  VertexDiffuseShader.cpp  VertexDiffuseShader.h  VertexDiffuseTest.cpp  VertexDiffuseTest.h
test/basic/: CubeTest.cpp  TriangleTest.cpp  TriangleTest.h  VertexColorEffect.cpp  VertexColorEffect.h  VertexColorEffectFactory.cpp  VertexColorEffectFactory.h
test/directional-light/: FragmentDirectionalLightEffect.cpp  FragmentDirectionalLightEffect.h  FragmentDirectionalLightEffectFactory.cpp  FragmentDirectionalLightEffectFactory.h  FragmentDirectionalLightTest.cpp  FragmentDirectionalLightTest.h  VertexDirectionalLightEffect.cpp  VertexDirectionalLightEffect.h  VertexDirectionalLightEffectFactory.cpp  VertexDirectionalLightTest.cpp  VertexDirectionalLightTest.h
test/point-light/: VertexPointLightEffect.cpp  VertexPointLightEffect.h  VertexPointLightEffectFactory.cpp  VertexPointLightEffectFactory.h  VertexPointLightTest.cpp  VertexPointLightTest.h
test/spot-light/: VertexSpotLightEffect.cpp  VertexSpotLightEffect.h  VertexSpotLightEffectFactory.cpp  VertexSpotLightTest.cpp
test/texture-mapping/: Texture2DEffect.cpp  Texture2DEffect.h  Texture2DEffectFactory.cpp  TexturedCubesTest.cpp  TexturedCubesTest.h  TexturedQuadTest.cpp  TexturedQuadTest.h
(+259 files in other folders)
